# assistitk12

./: .gitignore  CHANGELOG.md  README.md  config.py  main.py  pyproject.toml  requirements.txt  sample_bulk_upload.csv  seed.py
application/: __init__.py  email_utils.py  forms.py  models.py  routes.py  scheduled_jobs.py  utils.py
application/templates/: add_notification.html  add_role.html  add_site.html  add_ticket.html  add_title.html  add_user.html  base.html  bulk_upload_data.html  bulk_upload_users.html  change_password.html  edit_notification.html  edit_role.html  edit_site.html  edit_ticket copy.html  edit_ticket.html  edit_title.html  edit_user.html  index.html  login.html  notifications.html  organization.html  profile.html  roles.html  sites.html  tickets.html  titles.html  upload_user.html  users.html
installation/: create_env.py  seed_data.py
migrations/versions/: 070067d91702_drop_unique_constraint_on_site_acronyms.py  1bb51a6176c9_add_ftp_schedule_fields_to_organization.py  4eef9566168c_drop_unique_constraint_on_site_cds_and_.py  63cb377b163b_encrypt_user_email_field.py  6d209b9fc49c_add_ftp_fields_to_organization_drop_ftp_.py  8f7faa338f50_remove_site_abb_from_site.py  9c145fa43d80_add_ftp_schedule_table.py  9c1f318f3a7a_add_ftp_connection_table.py  b2f9da811cd8_rename_site_gu_to_site_acronyms.py  b47d77fd2576_add_must_change_password_to_user.py  b563253a4f19_add_login_lockout_fields_to_user.py  c1c0a7bbb4ca_encrypt_ftp_host_and_username_in_.py  (+1 more)
tests/: conftest.py  test_auth.py  test_crud.py  test_security.py  test_tickets.py  test_users.py
(+4 files in other folders)
