[project]
name = "assistitk12"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.5",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-caching>=2.3.1",
    "flask-mail>=0.10.0",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-paginate>=2024.4.12",
    "flask-wtf>=1.2.2",
    "pymysql>=1.1.2",
    "flask-limiter>=4.1.1",
    "flask-apscheduler>=1.13.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-flask>=1.3.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    # Expected in test environment — rate limiter uses in-memory storage by design
    "ignore:Rate limiter is using in-memory storage:RuntimeWarning",
    # SQLAlchemy legacy Query.get() shim inside flask-sqlalchemy — not our code
    "ignore:.*Query.get\\(\\) method is considered legacy.*:sqlalchemy.exc.LegacyAPIWarning",
]
